--- a/contact.html
+++ b/contact.html
@@ -279,7 +279,7 @@
 								<div class="footer-social-profile">
 									
 									<ul>
-										<li><a href=""><i class="fa fa-whatsapp"></i></a></li>
+										<li><a href="https://api.whatsapp.com/send?phone=573212414138&text=¡Hola!, Nececito mas informacion acerca de sus prodcutos"><i class="fa fa-whatsapp"></i></a></li>
 										
 									</ul>
 								</div>									
