--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
 								<div class="footer-social-profile">
 									
 									<ul>
-										<li><a href="https://api.whatsapp.com/send?phone=+573212414138&text=Hola%20quiero%20obtener%20informaci%C3%B3n%20acerca%20de%20sus%20servicios%20y%20productos%20"><i class="fa fa-whatsapp"></i></a></li>
+										<li><a href="https://api.whatsapp.com/send?phone=573212414138&text=¡Hola!, Nececito mas informacion acerca de sus prodcutos"><i class="fa fa-whatsapp"></i></a></li>
 										
 									</ul>
 								</div>									
